import groovy.json.JsonOutput
import groovy.json.JsonSlurper

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'idea'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.6'
    id 'eclipse'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

def versionProps = new Properties()
file('version.properties').withInputStream { versionProps.load(it) }

def currentBuild = versionProps.getProperty('build_number')?.toInteger() ?: 0
def baseVersion = versionProps.getProperty('version')
def stage = versionProps.getProperty('stage') ?: 'alpha'
def fullVersion = "${baseVersion}-b${currentBuild}-${stage}"

version = fullVersion
group = 'com.igteam.immersivegeology'
base.archivesName = 'ImmersiveGeology'

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['-Xmaxerrs', '500'])
}

tasks.withType(Jar).configureEach {
    archiveVersion.set(fullVersion)
    zip64 = true
}

ext {
    mod_id = 'immersivegeology'
    version_minecraft = versionProps['version_mc']
    version_neoforge = versionProps['version_neoforge']
    version_neoforge_min = versionProps['version_neoforge_min']
    version_parchment = versionProps['version_parchment']
    version_ie = versionProps['version_ie']
    version_ie_full = "${version_minecraft}-${version_ie}"
    version_ie_curse = versionProps['version_ie_curse']
    version_jei = versionProps['version_jei']
}

def versionReplacements = [
        version              : project.version,
        build_number         : currentBuild,
        version_mc           : version_minecraft,
        version_neoforge     : version_neoforge,
        version_neoforge_min : version_neoforge_min,
        version_ie           : version_ie_full,
        version_jei          : version_jei,
]

sourceSets {
    main {
        java { srcDirs = ["$rootDir/src/main/java"] }
        resources {
            srcDirs = ["$rootDir/src/main/resources", "$rootDir/src/generated/resources"]
        }
    }
    datagen {
        java { srcDirs = ["$rootDir/src/datagen/java"] }
        resources { srcDirs = ["$rootDir/src/datagen/resources"] }
        compileClasspath += main.output + main.compileClasspath
        runtimeClasspath += main.output + main.runtimeClasspath
    }
    gametest {
        java { srcDirs = ["$rootDir/src/gametest/java"] }
        resources { srcDirs = ["$rootDir/src/gametest/resources"] }
        compileClasspath += main.output + main.compileClasspath
        runtimeClasspath += main.output + main.runtimeClasspath
    }
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.FAIL
    inputs.properties(versionReplacements)
    filesMatching('META-INF/neoforge.mods.toml') {
        expand versionReplacements
    }
    exclude '.cache'
    doLast {
        destinationDir.eachFileRecurse { File file ->
            if (file.file && (file.name.endsWith('.json') || file.name.endsWith('.mcmeta'))) {
                try {
                    file.setText(JsonOutput.toJson(new JsonSlurper().parse(file, 'UTF-8')))
                } catch (Exception exception) {
                    logger.warn("Skipping invalid JSON file ${file.name}: ${exception.message}")
                }
            }
        }
    }
}

neoForge {
    version = project.version_neoforge

    parchment {
        mappingsVersion = project.version_parchment
        minecraftVersion = project.version_minecraft
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
            sourceSet sourceSets.datagen
            sourceSet sourceSets.gametest
        }
    }

    runs {
        client {
            client()
        }
        server {
            server()
            programArguments.addAll '--nogui'
        }
        data {
            data()
            sourceSet = sourceSets.datagen
            programArguments.addAll '--mod', mod_id.toString(), '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
        }
        gameTestServer {
            type = 'gameTestServer'
        }
        configureEach {
            gameDirectory = project.file('run')
            systemProperty('neoforge.enabledGameTestNamespaces', mod_id.toString())
        }
    }
}

tasks.register('prepareGametestOutputs') {
    dependsOn gametestClasses, processResources
}

tasks.register('prepareDatagenOutputs') {
    dependsOn datagenClasses, processResources
}

afterEvaluate {
    tasks.named('runData').configure { dependsOn('prepareDatagenOutputs', 'prepareGametestOutputs') }
    tasks.named('runServer').configure { standardInput = System.in }
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://www.cursemaven.com'; content { includeGroup 'curse.maven' } }
    maven { url = 'https://cfa2.cursemaven.com'; content { includeGroup 'curse.maven' } }
    maven { name = 'ParchmentMC'; url = 'https://ldtteam.jfrog.io/artifactory/parchmentmc-public/' }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "mezz.jei:jei-${version_minecraft}-neoforge-api:${version_jei}"
    runtimeOnly "mezz.jei:jei-${version_minecraft}-neoforge:${version_jei}"

    implementation "curse.maven:${version_ie_curse}"
    implementation "blusunrize.immersiveengineering:ImmersiveEngineering:${version_ie_full}:datagen"

    jarJar(implementation('malte0811:DualCodecs')) {
        version {
            strictly '[2.0.1,3)'
            prefer '2.0.1'
        }
    }

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
}

tasks.named('test') {
    useJUnitPlatform()
    outputs.upToDateWhen { false }
    testLogging.events 'passed', 'skipped', 'failed'
}

tasks.register('copyModsTomlForIntelliJ', Copy) {
    from processResources.destinationDir
    into "$projectDir/out/production/resources"
    include 'META-INF/neoforge.mods.toml'
    dependsOn processResources
}

tasks.register('bumpVersion') {
    def versionPropsFile = layout.projectDirectory.file('version.properties')
    inputs.file(versionPropsFile)
    outputs.upToDateWhen { false }
    doLast {
        def props = new Properties()
        versionPropsFile.asFile.withInputStream { props.load(it) }
        props['build_number'] = (currentBuild + 1).toString()
        versionPropsFile.asFile.withOutputStream { props.store(it, null) }
    }
}

tasks.register('datagenJar', Jar) {
    dependsOn datagenClasses
    archiveClassifier = 'datagen'
    from sourceSets.datagen.output
    manifest { attributes 'FMLModType': 'GAMELIBRARY' }
}

tasks.register('sourcesJar', Jar) {
    dependsOn classes
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
    from sourceSets.datagen.allSource
}

artifacts {
    archives sourcesJar
    archives datagenJar
}

def customGradle = rootProject.file('custom.gradle')
if (customGradle.exists()) apply from: customGradle
